--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jsgame",
   "version": "1.0.0",
   "description": "Simple multiplayuer javascript game using websockets",
-  "main": "main.js",
+  "main": "start",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
